# tceq-water-buyer-scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  water_buyer_relationships.db3
src/: main.rs  water_buyer_relationships.db3
src/input/: broken.csv  broken2.csv  sample.csv  single_sample.csv
src/queries/: insert_buyer_seller_relationship.sql  insert_water_detail.sql  insert_water_system.sql
