[package]
name = "tceq-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.9", features = ["string"] }
csv = "1.3.0"
scraper = { version = "0.20.0" }
minreq = { version = "2.11.2", features = ["https-rustls"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
regex = "1.10.6"
